--- a/oracledb/docker-compose.yml
+++ b/oracledb/docker-compose.yml
@@ -15,6 +15,6 @@ services:
   
 volumes:
   oracle-data:
-    name: mde-oradata
+    name: oradata
   oracle-dbs:
-    name: mde-oracle-dbs
+    name: oracle-dbs
