--- a/oracledb/docker-compose.yml
+++ b/oracledb/docker-compose.yml
@@ -2,14 +2,15 @@ version: "3.8"
 
 services:
   oracledb:
-    container_name: mde-oracledb
-    image: container-registry.oracle.com/database/free:latest
+    container_name: oracledb-23
+    image: container-registry.oracle.com/database/free:23.3.0.0
+    restart: unless-stopped
     ports:
-      - "1522:1521"
+      - "1521:1521"
     environment:
       - ORACLE_PWD=renaissance
     volumes:
-      - ./scripts:/opt/oracle/scripts/startup
+      - ./startup:/opt/oracle/scripts/startup
       - oracle-data:/opt/oracle/oradata
       - oracle-dbs:/opt/oracle/product/23c/dbhomeFree/dbs
   
