--- a/oracledb/docker-compose.yml
+++ b/oracledb/docker-compose.yml
@@ -3,14 +3,13 @@ version: "3.8"
 services:
   oracledb:
     container_name: oracledb-23
-    image: container-registry.oracle.com/database/free:23.3.0.0
+    build: .
     restart: unless-stopped
     ports:
       - "1521:1521"
     environment:
       - ORACLE_PWD=renaissance
     volumes:
-      - ./startup:/opt/oracle/scripts/startup
       - oracle-data:/opt/oracle/oradata
       - oracle-dbs:/opt/oracle/product/23c/dbhomeFree/dbs
   
